# io-safety-kit-for-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dogfooding_promotion.yml  promotion_candidate.yml  workflow_recipe.yml
.github/workflows/: ci.yml
docs/: codex_for_oss_application_draft.md  cross-platform-dogfooding.md  downstream-dogfooding.md  evidence-bundle-review.md  maintainer-workflows.md  publication-checklist.md  safe-output-promotion-loop.md  security-model.md  signed-approval-manifests.md  synthetic-maintainer-case-study.md  v1-stability.md
examples/: cross-platform-dogfooding-report.json  issue-triage-manifest.json  issue-triage-report.md  maintainer-job.json  pr-review-manifest.json  pr-review-report.md  promotion-candidate.json  release-checklist-manifest.json  sample-run-report.json  security-audit-manifest.json  signed-pr-review-manifest.json  signed-pr-review-manifest.sig  trust-policy.json
schemas/: approval-manifest.schema.json  promotion-candidate.schema.json
skills/oss-maintenance/: SKILL.md
src/codex_maintainer_safety_kit/: __init__.py  approval.py  cli.py  handoff.py  issue_triage.py  pr_review.py  promotion.py  runner.py  signature.py  trust_policy.py
src/codex_maintainer_safety_kit/schemas/: approval-manifest.schema.json
src/io_safety_kit/: __init__.py  __main__.py  approval.py  cli.py  handoff.py  issue_triage.py  pr_review.py  promotion.py  runner.py  signature.py  trust_policy.py
tests/: test_approval.py  test_cross_platform_dogfooding.py  test_issue_triage.py  test_pr_review.py  test_promotion.py  test_runner_handoff.py  test_signature.py  test_trust_policy.py
tests/fixtures/blocked_actions/: README.md  change_visibility.json  disable_branch_protection.json  force_push.json  read_secret.json
