[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-maintainer-safety-kit"
version = "0.1.2"
description = "Fail-closed approval manifests and report-only maintainer automation for AI-assisted OSS work."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "monolith-droid" }
]
keywords = [
  "codex",
  "open-source",
  "maintainer",
  "automation",
  "approval",
  "safety"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
cmsk = "codex_maintainer_safety_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
