[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "io-safety-kit-for-oss"
version = "0.2.6"
description = "Fail-closed input scopes, report-only workflows, and safe output promotion for AI-assisted OSS maintenance."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "monolith-droid" }
]
keywords = [
  "ai-assisted",
  "coding-agents",
  "open-source",
  "maintainer",
  "automation",
  "approval",
  "safety"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
iosk = "io_safety_kit.cli:main"
msk = "io_safety_kit.cli:main"
cmsk = "io_safety_kit.cli:main"

[project.optional-dependencies]
schema = [
  "jsonschema>=4.18"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_maintainer_safety_kit = ["schemas/*.json"]
